--- a/index.html
+++ b/index.html
@@ -257,7 +257,7 @@ for mobile and desktop
         <h2>Education</h2>
         <div class="Education">
             <div class="Degree">
-                <h3>Bachlor Of Engineering (CSE)</h3>
+                <h3>Bachelor Of Engineering (CSE)</h3>
                 <p>Navsahyadri Group Of Institutions,PUNE </p>
                 <p>Academic Year (2022-2026)</p>
                 <p>CGPA:8.81</p>
@@ -314,5 +314,6 @@ for mobile and desktop
 
     </script>
 </body>
+
 
 </html>
