--- a/index.html
+++ b/index.html
@@ -101,7 +101,7 @@
                     <div class="project">
                         <h3> ERP System</h3>
                         <a href="https://www.unisphere.tech">Deployed Link</a>
-                        <p>September 2025 - <P></P>resent</p>
+                        <p>September 2025 - <P></P>present</p>
                         <p>
                            Developed an ERP-based Student
  Management System to automate attendance, fees, homework, and performance
@@ -317,3 +317,4 @@ for mobile and desktop
 
 
 </html>
+
