--- a/index.html
+++ b/index.html
@@ -76,7 +76,7 @@
                             </div>
                         </a>
 
-                        <a href="">
+                        <a href="resume.pdf" target="_blank">
 
                             <div class="get-resume">
                                 GET RESUME<i class="fa-solid fa-download"></i>
@@ -101,7 +101,7 @@
                     <div class="project">
                         <h3> ERP System</h3>
                         <a href="https://www.unisphere.tech">Deployed Link</a>
-                        <p>September 2025 - Present</p>
+                        <p>September 2025 - <P></P>resent</p>
                         <p>
                            Developed an ERP-based Student
  Management System to automate attendance, fees, homework, and performance
@@ -257,7 +257,7 @@ for mobile and desktop
         <h2>Education</h2>
         <div class="Education">
             <div class="Degree">
-                <h3>Bachelor Of Engineering (CSE)</h3>
+                <h3>Bachlor Of Engineering (CSE)</h3>
                 <p>Navsahyadri Group Of Institutions,PUNE </p>
                 <p>Academic Year (2022-2026)</p>
                 <p>CGPA:8.81</p>
@@ -315,7 +315,4 @@ for mobile and desktop
     </script>
 </body>
 
-
 </html>
-
-
