Updated portfolio design/content

--- a/index.html
+++ b/index.html
@@ -59,14 +59,11 @@
 
                 </p>
                 <div class="toCover">
-
-
                     <div class="social-icons">
                         <a href="https://www.linkedin.com/in/shruti-ransing-7a4047302?utm_source=share&utm_campaign=share_via&utm_content=profile&utm_medium=android_app "><i
                                 class="fa-brands fa-linkedin"></i></a>
                         <a href=""><i class="fa-brands fa-github"></i></a>
                         <!-- <a href="https://t.me/SaloniPatil7"><i class="fa-brands fa-telegram"></i></a> -->
-
                     </div>
                     <div class="get-Info">
                         <a href="#contact">
@@ -75,7 +72,7 @@
                             </div>
                         </a>
 
-                        <a href="resume.pdf" target="_blank">
+                        <a href="ShrutiResume.pdf" target="_blank">
 
                             <div class="get-resume">
                                 GET RESUME<i class="fa-solid fa-download"></i>
