--- a/index.html
+++ b/index.html
@@ -107,7 +107,7 @@
                         <p>
                             <b>Key functionalities include:</b>
                         <ul type="square">
-                            <li>Studenys Login and Dashboard</li>
+                            <li>Students Login and Dashboard</li>
                             <li>Teachers Login and Dashboard</li>
                             <li>Attendance Management</li>
                             <li>Fees Management</li>
